--- a/package.json
+++ b/package.json
@@ -5,18 +5,38 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap --config next-sitemap.config.js",
     "start": "next start",
+    "generateicons": "npx pwa-asset-generator ./public/assets/images/icon.png ./public/assets/images/icons -p \"0\" -b \"#ff3535\"",
     "lint": "next lint"
   },
   "dependencies": {
+    "@maxmind/geoip2-node": "^3.2.0",
+    "axios": "^0.21.3",
+    "classnames": "^2.3.1",
     "next": "11.1.2",
+    "next-pwa": "^5.3.1",
+    "next-secure-headers": "^2.2.0",
+    "next-seo": "^4.26.0",
+    "nodemailer": "^6.6.3",
+    "nprogress": "^0.2.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-gtm-module": "^2.0.11",
+    "react-hook-form": "^7.15.0",
+    "react-transition-group": "^4.4.2",
+    "reactjs-popup": "^2.0.5",
+    "truncate": "^2.1.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/node": "^16.7.10",
     "@types/react": "17.0.20",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
+    "next-sitemap": "^1.6.164",
+    "sass": "^1.39.0",
     "typescript": "4.4.2"
   }
 }
