--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
   },
   "devDependencies": {
     "@types/node": "^16.7.10",
+    "@types/nprogress": "^0.2.0",
     "@types/react": "17.0.20",
+    "@types/react-gtm-module": "^2.0.1",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
