--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "postbuild": "next-sitemap --config next-sitemap.config.js",
     "start": "next start",
-    "generateicons": "npx pwa-asset-generator ./public/assets/images/icon.png ./public/assets/images/icons -p \"0\" -b \"#ff3535\"",
+    "generateicons": "npx pwa-asset-generator ./data/assets/images/icon.png ./data/assets/images/icons -p \"0\" -b \"#445FF8\"",
     "lint": "next lint"
   },
   "dependencies": {
