--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "17.0.2",
     "react-gtm-module": "^2.0.11",
     "react-hook-form": "^7.15.0",
+    "react-responsive-carousel": "^3.2.21",
     "react-transition-group": "^4.4.2",
     "reactjs-popup": "^2.0.5",
     "truncate": "^2.1.0",
